--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0px;
 font-family: sans-serif;
 }
 
@@ -12,9 +13,26 @@ h1{
 .half-width{
     width: 40%;
     float: left;
-    margin-left: 4%;
+    margin-left: 5%;
     padding-left: 2%;
 }
 .half-width img{
     width:100%;
+}
+.top-bannr{
+    
+background-image: url("images/top-banner.png");
+background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.button{
+        text-decoration: none;
+        background-image: linear-gradient(45deg, lightsalmon, tomato);
+        padding: 10px 20px;
+        border-radius: 5px;
+        color: white;
+
 }
