--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
     margin: 0px;
-font-family: sans-serif;
+    font-family: Poppins;
+}
+p{
+    color: dimgray;
 }
 
 h1{ 
     font-size: 50px;
-    font-family: sans-serif;
+    font-family: Poppins;
+}
+h2{
+    font-size: 40px;
 }
 .oi{
     color: orange;
@@ -20,7 +26,6 @@ h1{
     width:100%;
 }
 .top-bannr{
-    
 background-image: url("images/top-banner.png");
 background-repeat: no-repeat;
 }
@@ -34,5 +39,36 @@ section{
         padding: 10px 20px;
         border-radius: 5px;
         color: white;
-
+}
+.dream{
+    background-image: url("images/dream-bg.png");
+background-repeat: no-repeat;
+background-position: right;
+}
+.highlight{
+    color: orange;
+}
+.single-ex{
+box-shadow:  10px 10px 40px gray;
+border-radius: 5px;
+height: 50%;
+background-color: white;
+}
+.Experiences{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#Amba{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
